--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.0.0
+bleach==6.1.0
 cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.1
@@ -8,8 +9,11 @@ google-auth==2.23.3
 google-auth-oauthlib==1.1.0
 grpcio==1.59.0
 idna==3.4
+imageio==2.31.6
 importlib-metadata==6.8.0
 Jinja2==3.1.2
+kaggle==1.5.16
+lazy_loader==0.3
 Markdown==3.5
 MarkupSafe==2.1.3
 mpmath==1.3.0
@@ -30,26 +34,33 @@ nvidia-nvtx-cu12==12.1.105
 oauthlib==3.2.2
 packaging==23.2
 pandas==2.1.2
-Pillow==10.1.0
+Pillow==10.0.1
 protobuf==4.23.4
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 python-dateutil==2.8.2
+python-slugify==8.0.1
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+scikit-image==0.22.0
+scipy==1.11.3
 six==1.16.0
 sympy==1.12
 tensorboard==2.15.0
 tensorboard-data-server==0.7.2
+text-unidecode==1.3
+tifffile==2023.9.26
 torch==2.1.0
 torch-tb-profiler==0.4.3
 torchaudio==2.1.0
 torchvision==0.16.0
+tqdm==4.66.1
 triton==2.1.0
 typing_extensions==4.8.0
 tzdata==2023.3
 urllib3==2.0.7
+webencodings==0.5.1
 Werkzeug==3.0.1
 zipp==3.17.0
